FEAT: Implement base UtilityEvaluator resource for data-driven AI

--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -159,6 +159,14 @@ list=[{
 "language": &"GDScript",
 "path": "res://definitions/base_definitions/tag_definition.gd"
 }, {
+"base": &"Resource",
+"class": &"UtilityEvaluator",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://definitions/base_definitions/utility_evaluator.gd"
+}, {
 "base": &"Node",
 "class": &"WorldManager",
 "icon": "",
