FIX: Resolve AIWorkerThread errors (OS.delay_msec, GOAPPlanner args)

--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -11,3 +11,115 @@ state={
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
+
+[res://definitions/base_definitions/goap_goal_definition.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 55,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 36,
+"scroll_position": 14.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://definitions/base_definitions/goap_action_definition.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 43,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 56,
+"scroll_position": 34.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://features/npc_module/components/utility_evaluators/need_level_evaluator.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 34,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 26,
+"scroll_position": 4.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://features/npc_module/components/utility_evaluators/tag_presence_evaluator.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 34,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 30,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://features/npc_module/components/utility_evaluators/personality_trait_evaluator.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 34,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 26,
+"scroll_position": 4.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://systems/ai_worker_thread.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 36,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 181,
+"scroll_position": 160.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://systems/ai_manager.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 59,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 248,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://definitions/ai/goals/goal_eat_food.json]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 1,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 23,
+"scroll_position": 1.0,
+"selection": false,
+"syntax_highlighter": "JSON"
+}
