--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -7,6 +7,14 @@ list=[{
 "language": &"GDScript",
 "path": "res://systems/ai_manager.gd"
 }, {
+"base": &"Thread",
+"class": &"AIWorkerThread",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://systems/ai_worker_thread.gd"
+}, {
 "base": &"Node",
 "class": &"ActionPrimitiveHandler",
 "icon": "",
@@ -135,6 +143,14 @@ list=[{
 "language": &"GDScript",
 "path": "res://features/npc_module/components/npc_memory.gd"
 }, {
+"base": &"UtilityEvaluator",
+"class": &"NeedLevelEvaluator",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://features/npc_module/components/utility_evaluators/need_level_evaluator.gd"
+}, {
 "base": &"Node",
 "class": &"PerceptionManager",
 "icon": "",
@@ -151,6 +167,14 @@ list=[{
 "language": &"GDScript",
 "path": "res://definitions/base_definitions/personality_trait_definition.gd"
 }, {
+"base": &"UtilityEvaluator",
+"class": &"PersonalityTraitEvaluator",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://features/npc_module/components/utility_evaluators/personality_trait_evaluator.gd"
+}, {
 "base": &"Resource",
 "class": &"TagDefinition",
 "icon": "",
@@ -158,6 +182,14 @@ list=[{
 "is_tool": false,
 "language": &"GDScript",
 "path": "res://definitions/base_definitions/tag_definition.gd"
+}, {
+"base": &"UtilityEvaluator",
+"class": &"TagPresenceEvaluator",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://features/npc_module/components/utility_evaluators/tag_presence_evaluator.gd"
 }, {
 "base": &"Resource",
 "class": &"UtilityEvaluator",
