FIX: Correct GOAPPlanner.find_plan arguments in AIWorkerThread

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,8 +9,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://systems/ai_worker_thread.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://systems/", "res://features/", "res://features/npc_module/", "res://features/npc_module/components/", "res://features/npc_module/components/utility_evaluators/", "res://definitions/", "res://definitions/base_definitions/", "res://definitions/ai/", "res://definitions/ai/goals/")
+dock_filesystem_selected_paths=PackedStringArray("res://features/npc_module/goap/goap_planner.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://systems/", "res://features/", "res://features/npc_module/", "res://features/npc_module/goap/", "res://features/npc_module/components/", "res://features/npc_module/components/utility_evaluators/", "res://definitions/", "res://definitions/base_definitions/", "res://definitions/ai/", "res://definitions/ai/goals/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -43,7 +43,7 @@ position=Vector2i(0, 23)
 
 [ScriptEditor]
 
-open_scripts=["res://systems/ai_manager.gd", "res://systems/ai_worker_thread.gd", "res://definitions/ai/goals/goal_eat_food.json", "res://definitions/base_definitions/goap_action_definition.gd", "res://definitions/base_definitions/goap_goal_definition.gd", "res://features/npc_module/components/utility_evaluators/need_level_evaluator.gd", "res://features/npc_module/components/utility_evaluators/personality_trait_evaluator.gd", "res://features/npc_module/components/utility_evaluators/tag_presence_evaluator.gd", "res://definitions/base_definitions/utility_evaluator.gd"]
+open_scripts=["res://systems/ai_manager.gd", "res://systems/ai_worker_thread.gd", "res://definitions/ai/goals/goal_eat_food.json", "res://definitions/base_definitions/goap_goal_definition.gd", "res://features/npc_module/goap/goap_planner.gd", "res://features/npc_module/components/utility_evaluators/need_level_evaluator.gd", "res://features/npc_module/components/utility_evaluators/personality_trait_evaluator.gd", "res://features/npc_module/components/utility_evaluators/tag_presence_evaluator.gd", "res://definitions/base_definitions/utility_evaluator.gd"]
 selected_script="res://systems/ai_worker_thread.gd"
 open_help=[]
 script_split_offset=200
