--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -90,8 +90,8 @@ state={
 "column": 36,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 181,
-"scroll_position": 160.0,
+"row": 182,
+"scroll_position": 161.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -122,4 +122,18 @@ state={
 "scroll_position": 1.0,
 "selection": false,
 "syntax_highlighter": "JSON"
+}
+
+[res://features/npc_module/goap/goap_planner.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 61,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 223,
+"scroll_position": 51.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
 }
