FIX: Correct GOAPPlanner.find_plan arguments in AIWorkerThread

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -10,7 +10,7 @@ dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
 dock_filesystem_selected_paths=PackedStringArray("res://features/npc_module/goap/goap_planner.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://systems/", "res://features/", "res://features/npc_module/", "res://features/npc_module/goap/", "res://features/npc_module/components/", "res://features/npc_module/components/utility_evaluators/", "res://definitions/", "res://definitions/base_definitions/", "res://definitions/ai/", "res://definitions/ai/goals/")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://systems/", "res://features/", "res://features/npc_module/", "res://features/npc_module/goap/", "res://features/npc_module/components/", "res://features/npc_module/components/utility_evaluators/", "res://definitions/", "res://definitions/base_definitions/", "res://definitions/ai/", "res://definitions/ai/goals/", "res://definitions/ai/actions/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
