FIX: Resolve NPCAI type not found and constructor argument errors

--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -216,8 +216,22 @@ state={
 "column": 68,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 525,
-"scroll_position": 505.0,
+"row": 536,
+"scroll_position": 516.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
+}
+
+[res://definitions/needs/need_hunger.json]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 1,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 8,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "JSON"
 }
