FIX: Resolve NPCMemory errors with Time.get_datetime_dict_from_system and EntityManager access

--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -216,8 +216,8 @@ state={
 "column": 68,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 536,
-"scroll_position": 516.0,
+"row": 539,
+"scroll_position": 519.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -234,4 +234,18 @@ state={
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "JSON"
+}
+
+[res://features/npc_module/components/npc_memory.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 19,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 194,
+"scroll_position": 178.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
 }
