--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -101,12 +101,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 59,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 248,
-"scroll_position": 228.0,
-"selection": false,
+"row": 3,
+"scroll_position": 0.0,
+"selection": true,
+"selection_from_column": 0,
+"selection_from_line": 3,
+"selection_to_column": 33,
+"selection_to_line": 3,
 "syntax_highlighter": "GDScript"
 }
 
@@ -246,6 +250,20 @@ state={
 "h_scroll_position": 0,
 "row": 194,
 "scroll_position": 178.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://systems/global_time_manager.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 32,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 66,
+"scroll_position": 45.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
