FEAT: Make entity spawning purely data-driven via scene_path in definitions

--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -150,8 +150,8 @@ state={
 "column": 19,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 396,
-"scroll_position": 376.0,
+"row": 407,
+"scroll_position": 387.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -266,4 +266,46 @@ state={
 "scroll_position": 53.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
+}
+
+[res://definitions/base_definitions/entity_definition.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 66,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 18,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://definitions/npcs/npc_human_base.json]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 1,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 20,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "JSON"
+}
+
+[res://definitions/items/item_apple.json]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 1,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 15,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "JSON"
 }
