--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -31,9 +31,9 @@ dock_5="Inspector,Node,History"
 open_scenes=PackedStringArray("res://scenes/main.tscn")
 current_scene="res://scenes/main.tscn"
 center_split_offset=-289
-selected_default_debugger_tab_idx=0
+selected_default_debugger_tab_idx=1
 selected_main_editor_idx=2
-selected_bottom_panel_item=0
+selected_bottom_panel_item=1
 
 [EditorWindow]
 
@@ -43,8 +43,8 @@ position=Vector2i(0, 23)
 
 [ScriptEditor]
 
-open_scripts=["res://systems/action_primitive_handler.gd", "res://systems/ai_manager.gd", "res://systems/ai_worker_thread.gd", "res://definitions/base_definitions/entity_definition.gd", "res://systems/entity_manager.gd", "res://systems/global_time_manager.gd", "res://definitions/ai/goals/goal_eat_food.json", "res://definitions/base_definitions/goap_goal_definition.gd", "res://features/npc_module/goap/goap_planner.gd", "res://definitions/base_definitions/granular_need_definition.gd", "res://definitions/items/item_apple.json", "res://definitions/base_definitions/item_definition.gd", "res://definitions/needs/need_hunger.json", "res://features/npc_module/components/utility_evaluators/need_level_evaluator.gd", "res://features/npc_module/npc_ai.gd", "res://definitions/base_definitions/npc_entity_definition.gd", "res://definitions/npcs/npc_human_base.json", "res://features/npc_module/components/npc_memory.gd", "res://features/npc_module/components/utility_evaluators/personality_trait_evaluator.gd", "res://features/npc_module/components/utility_evaluators/tag_presence_evaluator.gd", "res://definitions/base_definitions/utility_evaluator.gd"]
-selected_script="res://systems/entity_manager.gd"
+open_scripts=["res://systems/action_primitive_handler.gd", "res://systems/ai_manager.gd", "res://systems/ai_worker_thread.gd", "res://features/npc_module/components/daily_schedule.gd", "res://definitions/base_definitions/entity_definition.gd", "res://systems/entity_manager.gd", "res://systems/global_time_manager.gd", "res://definitions/ai/goals/goal_eat_food.json", "res://definitions/base_definitions/goap_goal_definition.gd", "res://features/npc_module/goap/goap_planner.gd", "res://definitions/base_definitions/granular_need_definition.gd", "res://definitions/items/item_apple.json", "res://definitions/base_definitions/item_definition.gd", "res://scenes/main.gd", "res://definitions/needs/need_hunger.json", "res://features/npc_module/components/utility_evaluators/need_level_evaluator.gd", "res://features/npc_module/npc_ai.gd", "res://definitions/base_definitions/npc_entity_definition.gd", "res://definitions/npcs/npc_human_base.json", "res://features/npc_module/components/npc_memory.gd", "res://features/npc_module/components/utility_evaluators/personality_trait_evaluator.gd", "res://features/npc_module/components/utility_evaluators/tag_presence_evaluator.gd", "res://definitions/base_definitions/utility_evaluator.gd"]
+selected_script="res://features/npc_module/npc_ai.gd"
 open_help=[]
 script_split_offset=200
 list_split_offset=0
