--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -3,11 +3,11 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 13,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 52,
-"scroll_position": 30.0,
+"row": 28,
+"scroll_position": 25.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -147,11 +147,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 19,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 407,
-"scroll_position": 387.0,
+"row": 187,
+"scroll_position": 184.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -220,8 +220,8 @@ state={
 "column": 68,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 539,
-"scroll_position": 519.0,
+"row": 541,
+"scroll_position": 521.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -259,11 +259,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 32,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 74,
-"scroll_position": 53.0,
+"row": 40,
+"scroll_position": 30.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -308,4 +308,32 @@ state={
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "JSON"
+}
+
+[res://scenes/main.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 27,
+"scroll_position": 24.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://features/npc_module/components/daily_schedule.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 0,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
 }
