--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,8 +9,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://definitions/ai/actions/action_eat.json")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://systems/", "res://features/", "res://features/npc_module/", "res://features/item_module/", "res://definitions/", "res://definitions/npcs/", "res://definitions/needs/", "res://definitions/items/", "res://definitions/base_definitions/", "res://definitions/ai/", "res://definitions/ai/goals/", "res://definitions/ai/actions/")
+dock_filesystem_selected_paths=PackedStringArray("res://features/npc_module/npc_ai.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://systems/", "res://features/", "res://features/npc_module/", "res://features/npc_module/components/", "res://features/item_module/", "res://definitions/", "res://definitions/npcs/", "res://definitions/needs/", "res://definitions/items/", "res://definitions/base_definitions/", "res://definitions/ai/", "res://definitions/ai/goals/", "res://definitions/ai/actions/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -31,7 +31,7 @@ dock_5="Inspector,Node,History"
 open_scenes=PackedStringArray("res://scenes/main.tscn")
 current_scene="res://scenes/main.tscn"
 center_split_offset=-289
-selected_default_debugger_tab_idx=0
+selected_default_debugger_tab_idx=1
 selected_main_editor_idx=2
 selected_bottom_panel_item=1
 
@@ -43,8 +43,8 @@ position=Vector2i(0, 23)
 
 [ScriptEditor]
 
-open_scripts=["res://definitions/ai/actions/action_eat.json", "res://systems/action_primitive_handler.gd", "res://systems/ai_manager.gd", "res://systems/ai_worker_thread.gd", "res://features/npc_module/components/daily_schedule.gd", "res://definitions/base_definitions/entity_definition.gd", "res://systems/entity_manager.gd", "res://systems/global_time_manager.gd", "res://definitions/ai/goals/goal_eat_food.json", "res://definitions/base_definitions/goap_goal_definition.gd", "res://features/npc_module/goap/goap_planner.gd", "res://definitions/base_definitions/granular_need_definition.gd", "res://features/item_module/item.gd", "res://definitions/items/item_apple.json", "res://definitions/base_definitions/item_definition.gd", "res://scenes/main.gd", "res://definitions/needs/need_hunger.json", "res://features/npc_module/components/utility_evaluators/need_level_evaluator.gd", "res://features/npc_module/npc.gd", "res://features/npc_module/npc_ai.gd", "res://definitions/base_definitions/npc_entity_definition.gd", "res://definitions/npcs/npc_human_base.json", "res://features/npc_module/components/npc_memory.gd", "res://features/npc_module/components/utility_evaluators/personality_trait_evaluator.gd", "res://features/npc_module/components/utility_evaluators/tag_presence_evaluator.gd", "res://definitions/base_definitions/utility_evaluator.gd"]
-selected_script="res://systems/entity_manager.gd"
+open_scripts=["res://definitions/ai/actions/action_eat.json", "res://definitions/ai/actions/action_pickup_item.json", "res://systems/action_primitive_handler.gd", "res://systems/ai_manager.gd", "res://systems/ai_worker_thread.gd", "res://features/npc_module/components/daily_schedule.gd", "res://definitions/base_definitions/entity_definition.gd", "res://systems/entity_manager.gd", "res://systems/global_time_manager.gd", "res://definitions/ai/goals/goal_eat_food.json", "res://definitions/base_definitions/goap_goal_definition.gd", "res://features/npc_module/goap/goap_planner.gd", "res://definitions/base_definitions/granular_need_definition.gd", "res://features/item_module/item.gd", "res://definitions/items/item_apple.json", "res://definitions/base_definitions/item_definition.gd", "res://scenes/main.gd", "res://definitions/needs/need_hunger.json", "res://features/npc_module/components/utility_evaluators/need_level_evaluator.gd", "res://features/npc_module/npc.gd", "res://features/npc_module/npc_ai.gd", "res://definitions/base_definitions/npc_entity_definition.gd", "res://definitions/npcs/npc_human_base.json", "res://features/npc_module/components/npc_memory.gd", "res://features/npc_module/components/utility_evaluators/personality_trait_evaluator.gd", "res://features/npc_module/components/utility_evaluators/tag_presence_evaluator.gd", "res://definitions/base_definitions/utility_evaluator.gd", "res://systems/world_manager.gd"]
+selected_script="res://scenes/main.gd"
 open_help=[]
 script_split_offset=200
 list_split_offset=0
