--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -23,6 +23,14 @@ list=[{
 "language": &"GDScript",
 "path": "res://systems/action_primitive_handler.gd"
 }, {
+"base": &"RefCounted",
+"class": &"DailySchedule",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://features/npc_module/components/daily_schedule.gd"
+}, {
 "base": &"Resource",
 "class": &"EntityDefinition",
 "icon": "",
