--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,8 +9,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://features/npc_module/npc_ai.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://systems/", "res://features/", "res://features/npc_module/", "res://features/npc_module/components/", "res://features/item_module/", "res://definitions/", "res://definitions/npcs/", "res://definitions/needs/", "res://definitions/items/", "res://definitions/base_definitions/", "res://definitions/ai/", "res://definitions/ai/goals/", "res://definitions/ai/actions/")
+dock_filesystem_selected_paths=PackedStringArray("res://scenes/main.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://systems/", "res://scenes/", "res://features/npc_module/", "res://features/npc_module/components/", "res://features/item_module/", "res://definitions/npcs/", "res://definitions/needs/", "res://definitions/items/", "res://definitions/base_definitions/", "res://definitions/ai/", "res://definitions/ai/goals/", "res://definitions/ai/actions/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -31,9 +31,9 @@ dock_5="Inspector,Node,History"
 open_scenes=PackedStringArray("res://scenes/main.tscn")
 current_scene="res://scenes/main.tscn"
 center_split_offset=-289
-selected_default_debugger_tab_idx=0
+selected_default_debugger_tab_idx=1
 selected_main_editor_idx=2
-selected_bottom_panel_item=1
+selected_bottom_panel_item=0
 
 [EditorWindow]
 
