--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -143,11 +143,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 19,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 410,
-"scroll_position": 390.0,
+"row": 402,
+"scroll_position": 391.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -213,12 +213,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 68,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 542,
-"scroll_position": 522.0,
-"selection": false,
+"row": 3,
+"scroll_position": 0.0,
+"selection": true,
+"selection_from_column": 0,
+"selection_from_line": 3,
+"selection_to_column": 29,
+"selection_to_line": 3,
 "syntax_highlighter": "GDScript"
 }
 
@@ -400,6 +404,20 @@ state={
 "h_scroll_position": 0,
 "row": 0,
 "scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://features/npc_module/components/npc_blackboard.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 19,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 52,
+"scroll_position": 31.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
