FIX: Provide required arguments to KnownFact constructor in PerceptionManager

--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -90,8 +90,8 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 82,
-"scroll_position": 72.0,
+"row": 59,
+"scroll_position": 49.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -104,8 +104,8 @@ state={
 "column": 59,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 263,
-"scroll_position": 243.0,
+"row": 261,
+"scroll_position": 242.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -216,13 +216,9 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 3,
-"scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 0,
-"selection_from_line": 3,
-"selection_to_column": 29,
-"selection_to_line": 3,
+"row": 239,
+"scroll_position": 229.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -418,6 +414,20 @@ state={
 "h_scroll_position": 0,
 "row": 52,
 "scroll_position": 31.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://systems/perception_manager.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 37,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 71,
+"scroll_position": 54.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
