--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -119,7 +119,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 23,
-"scroll_position": 1.0,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "JSON"
 }
@@ -216,8 +216,8 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 239,
-"scroll_position": 229.0,
+"row": 4,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -241,11 +241,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 19,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 73,
-"scroll_position": 65.0,
+"row": 205,
+"scroll_position": 186.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -430,4 +430,32 @@ state={
 "scroll_position": 58.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
+}
+
+[res://definitions/base_definitions/tag_definition.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 0,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://definitions/tags/tag_hungry.json]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 1,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 5,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "JSON"
 }
