FEAT: Add schedule_entries property to NPCEntityDefinition

--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -202,8 +202,8 @@ state={
 "column": 39,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 32,
-"scroll_position": 11.0,
+"row": 36,
+"scroll_position": 15.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -514,4 +514,18 @@ state={
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "JSON"
+}
+
+[res://definitions/base_definitions/schedule_entry.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 40,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 13,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
 }
