--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -184,6 +184,14 @@ list=[{
 "path": "res://features/npc_module/components/utility_evaluators/personality_trait_evaluator.gd"
 }, {
 "base": &"Resource",
+"class": &"ScheduleEntry",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://definitions/base_definitions/schedule_entry.gd"
+}, {
+"base": &"Resource",
 "class": &"TagDefinition",
 "icon": "",
 "is_abstract": false,
