--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -174,8 +174,8 @@ state={
 "column": 12,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 169,
-"scroll_position": 149.0,
+"row": 144,
+"scroll_position": 124.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -528,4 +528,32 @@ state={
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
+}
+
+[res://definitions/ai/goals/goal_go_to_location.json]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 1,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 10,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "JSON"
+}
+
+[res://definitions/ai/actions/action_move_to_location.json]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 1,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 13,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "JSON"
 }
