FIX: Correct syntax error in EntityManager _get_resource_id_from_object function

--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -143,11 +143,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 19,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 402,
-"scroll_position": 391.0,
+"row": 295,
+"scroll_position": 279.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -213,10 +213,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 68,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 496,
+"row": 497,
 "scroll_position": 480.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -545,6 +545,20 @@ state={
 }
 
 [res://definitions/ai/actions/action_move_to_location.json]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 1,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 13,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "JSON"
+}
+
+[res://definitions/items/item_house.json]
 
 state={
 "bookmarks": PackedInt32Array(),
