--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -143,11 +143,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 19,
+"column": 10,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 295,
-"scroll_position": 279.0,
+"row": 195,
+"scroll_position": 177.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -286,8 +286,8 @@ state={
 "column": 1,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 20,
-"scroll_position": 0.0,
+"row": 23,
+"scroll_position": 2.0,
 "selection": false,
 "syntax_highlighter": "JSON"
 }
@@ -311,11 +311,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 40,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 21,
-"scroll_position": 11.0,
+"row": 119,
+"scroll_position": 98.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -567,6 +567,20 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 13,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "JSON"
+}
+
+[res://definitions/npcs/schedules/human_base_home_schedule.json]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 1,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 5,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "JSON"
