Attempt Fix of Entity Manager 3

--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -32,12 +32,12 @@ list=[{
 "path": "res://features/npc_module/components/daily_schedule.gd"
 }, {
 "base": &"Resource",
-"class": &"EntityDefinition",
+"class": &"DefinitionBase",
 "icon": "",
 "is_abstract": false,
 "is_tool": false,
 "language": &"GDScript",
-"path": "res://definitions/base_definitions/entity_definition.gd"
+"path": "res://definitions/base_definitions/definition_base.gd"
 }, {
 "base": &"Node",
 "class": &"EntityManager",
@@ -45,9 +45,9 @@ list=[{
 "is_abstract": false,
 "is_tool": false,
 "language": &"GDScript",
-"path": "res://systems/entity_manager.gd"
+"path": "res://definitions/base_definitions/entity_definition.gd"
 }, {
-"base": &"Resource",
+"base": &"DefinitionBase",
 "class": &"GOAPActionDefinition",
 "icon": "",
 "is_abstract": false,
@@ -55,7 +55,7 @@ list=[{
 "language": &"GDScript",
 "path": "res://definitions/base_definitions/goap_action_definition.gd"
 }, {
-"base": &"Resource",
+"base": &"DefinitionBase",
 "class": &"GOAPGoalDefinition",
 "icon": "",
 "is_abstract": false,
@@ -79,7 +79,7 @@ list=[{
 "language": &"GDScript",
 "path": "res://systems/global_time_manager.gd"
 }, {
-"base": &"Resource",
+"base": &"DefinitionBase",
 "class": &"GranularNeedDefinition",
 "icon": "",
 "is_abstract": false,
@@ -167,7 +167,7 @@ list=[{
 "language": &"GDScript",
 "path": "res://systems/perception_manager.gd"
 }, {
-"base": &"Resource",
+"base": &"DefinitionBase",
 "class": &"PersonalityTraitDefinition",
 "icon": "",
 "is_abstract": false,
@@ -183,7 +183,7 @@ list=[{
 "language": &"GDScript",
 "path": "res://features/npc_module/components/utility_evaluators/personality_trait_evaluator.gd"
 }, {
-"base": &"Resource",
+"base": &"DefinitionBase",
 "class": &"ScheduleEntry",
 "icon": "",
 "is_abstract": false,
@@ -191,7 +191,7 @@ list=[{
 "language": &"GDScript",
 "path": "res://definitions/base_definitions/schedule_entry.gd"
 }, {
-"base": &"Resource",
+"base": &"DefinitionBase",
 "class": &"TagDefinition",
 "icon": "",
 "is_abstract": false,
