Attempt Fix of Entity Manager 4

--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -45,7 +45,7 @@ list=[{
 "is_abstract": false,
 "is_tool": false,
 "language": &"GDScript",
-"path": "res://definitions/base_definitions/entity_definition.gd"
+"path": "res://systems/entity_manager.gd"
 }, {
 "base": &"DefinitionBase",
 "class": &"GOAPActionDefinition",
@@ -95,7 +95,7 @@ list=[{
 "language": &"GDScript",
 "path": "res://features/item_module/item.gd"
 }, {
-"base": &"EntityDefinition",
+"base": &"DefinitionBase",
 "class": &"ItemDefinition",
 "icon": "",
 "is_abstract": false,
@@ -135,7 +135,7 @@ list=[{
 "language": &"GDScript",
 "path": "res://features/npc_module/components/npc_blackboard.gd"
 }, {
-"base": &"EntityDefinition",
+"base": &"DefinitionBase",
 "class": &"NPCEntityDefinition",
 "icon": "",
 "is_abstract": false,
