refactor(data): Standardize all definitions to use a common 'id' property

--- a/definitions/items/item_apple.json
+++ b/definitions/items/item_apple.json
@@ -1,5 +1,5 @@
 {
-  "entity_id": "item_apple",
+  "id": "item_apple",
   "entity_name": "Apple",
   "entity_type": "ITEM",
   "scene_path": "res://scenes/items/apple.tscn",
