--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -143,11 +143,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 19,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 226,
-"scroll_position": 206.0,
+"row": 152,
+"scroll_position": 142.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -570,7 +570,7 @@ state={
 "column": 1,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 5,
+"row": 6,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "JSON"
@@ -602,4 +602,32 @@ state={
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
+}
+
+[res://definitions/tags/tag_food.json]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 1,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 5,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "JSON"
+}
+
+[res://definitions/traits/trait_gluttonous.json]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 1,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 6,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "JSON"
 }
